adding google site verification content meta teg

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <meta name="author" content="Dilshodbek Aqiyev" />
     <meta name="robots" content="index, follow" />
     <meta
+      name="google-site-verification"
+      content="Ek-QOodtrApoTU_IKtMMysimZH31KQFz1jQDWgHkNJw" />
+    <meta
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-eval' 'unsafe-inline';" />
     <link
